Conexión con la base de datos de PostgreSQL

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db;Cache=Shared"
+    "PostgreSQLConnection": "Host=dpg-crs87n3tq21c73dd4beg-a.oregon-postgres.render.com;Database=bd_pc2_lazaro;Username=bd_pc2_lazaro_user;Password=OEB7mOPtzf3uxqpFmu2OIfobDD98bK6G;SSL Mode=Require;Trust Server Certificate=true"
   },
   "Logging": {
     "LogLevel": {
